--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DSA</title>
 </head>
 <body>
-    <h1>DSA - Practice</h1>
+    <h1>Data Structure And Algorithm - Practice</h1>
     <script src="practice.js"></script>
 </body>
 </html>
