--- a/Sorting/mergeSort.html
+++ b/Sorting/mergeSort.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         function mergeSort(arr) {
@@ -44,63 +46,68 @@
 
 
 
-// --------------------------------------------------------------------------------------------------------------------------
-// ==================== Merge Sort another approach =================================================================== 
+    //
+    --------------------------------------------------------------------------------------------------------------------------
+    // ==================== Merge Sort another approach (Take U Forward)
+    ===================================================================
 
 
-<script>
-    function merge(arr, low, mid, high) {
-    let temp = [];
-    let left = low;
-    let right = mid + 1;
-    while (left <= mid && right <= high) {
-        if (arr[left] <= arr[right]) {
-            temp.push(arr[left]);
-            left++;
-        } else {
-            temp.push(arr[right]);
-            right++;
+    <script>
+        function merge(arr, low, mid, high) {
+            let temp = [];
+            let left = low;
+            let right = mid + 1;
+            while (left <= mid && right <= high) {
+                if (arr[left] <= arr[right]) {
+                    temp.push(arr[left]);
+                    left++;
+                } else {
+                    temp.push(arr[right]);
+                    right++;
+                }
+            }
+
+            // copying left-out elements from left half
+            while (left <= mid) {
+                temp.push(arr[left]);
+                left++;
+            }
+
+            // copying left-out elements from right half
+            while (right <= high) {
+                temp.push(arr[right]);
+                right++;
+            }
+
+            // inserting from temp array to original array.
+            let tempIndex = 0;
+            for (let i = low; i <= high; i++) { // loop must be from low to high not 0 to arr.length-1
+                arr[i] = temp[tempIndex];
+                tempIndex++;
+            }
         }
-    }
 
-    // copying left-out elements from left half
-    while (left <= mid) {
-        temp.push(arr[left]);
-        left++;
-    }
+        function mergeSort(arr, low, high) {
+            if (low >= high) {
+                return
+            }
 
-    // copying left-out elements from right half
-    while (right <= high) {
-        temp.push(arr[right]);
-        right++;
-    }
+            let mid = Math.floor((low + high) / 2);
 
-    // inserting from temp array to original array.
-    for (let i = low; i <= high; i++) {
-        arr[i] = temp[i - low];
-    }
-}
+            mergeSort(arr, low, mid);
+            mergeSort(arr, mid + 1, high);
+            merge(arr, low, mid, high);
+        }
 
-function mergeSort(arr, low, high) {
-    if (low >= high) {
-        return
-    }
-
-    let mid = Math.floor((low + high) / 2);
-
-    mergeSort(arr, low, mid);
-    mergeSort(arr, mid + 1, high);
-    merge(arr, low, mid, high);
-}
-
-let arr = [9, 4, 7, 6, 3, 1, 5];
-console.log(mergeSort(arr, 0, arr.length - 1));
-console.log(arr); // [1, 3, 4, 5, 6, 7, 9]
+        let arr = [9, 4, 7, 6, 3, 1, 5];
+        console.log(mergeSort(arr, 0, arr.length - 1));
+        console.log(arr); // [1, 3, 4, 5, 6, 7, 9]
 
     </script>
 </body>
+
 </html>
 
 // inversion count problem is similar to it.
 
-// 
+//
