--- a/Sorting/quickSort.html
+++ b/Sorting/quickSort.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        const items = [15,20,3,9];
+        const items = [15, 20, 3, 9];
         function quickSort(arr) {
             if (arr.length <= 1) {
                 return arr;
@@ -32,8 +32,49 @@
 
         console.log(quickSort(items));
     </script>
+
+    <script>
+        // TC - O(n log n) - Best and Average Case, O(n^2) - Worst Case
+        // SC - O(1)
+        function partition(arr, low, high) {
+            let pivot = arr[low];
+            let i = low;
+            let j = high;
+
+            while (i < j) {
+                while (arr[i] <= pivot && i <= high - 1) {
+                    i++;
+                }
+                while (arr[j] > pivot && j >= low + 1) {
+                    j--;
+                }
+                if (i < j) {
+                    let temp = arr[i];
+                    arr[i] = arr[j];
+                    arr[j] = temp;
+                }
+            }
+            let temp = arr[low];
+            arr[low] = arr[j];
+            arr[j] = temp;
+            return j;
+        }
+
+        function quickSort(arr, low, high) {
+            if (low < high) {
+                let pivotIdx = partition(arr, low, high);
+                quickSort(arr, low, pivotIdx - 1);
+                quickSort(arr, pivotIdx + 1, high);
+            }
+
+            return arr;
+        }
+
+        let arr = [4, 6, 2, 5, 7, 9, 1, 3];
+        let low = 0;
+        let high = arr.length - 1;
+        console.log(quickSort(arr, low, high)); // [1, 2, 3, 4, 5, 6, 7, 9]
+    </script>
 </body>
 
 </html>
-
-
